[package]
name = "embedded_graphics_framebuffer"
version = "0.1.1"
authors = ["vji2i0 <vladislavmipt@gmail.com>"]
description = "Framebuffer driver for lvgl-rs."
license = "MIT"
edition = "2018"
repository = "https://github.com/vji2i0/embedded_graphics_framebuffer"
keywords = ["embedded", "graphics", "framebuffer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
framebuffer = "0.3.0"
